Fix omnibox dropdown bounds setting on non-integral scale factors

Care needs to be taken when querying the current Widget bounds since
it may be rounded up from a prior call to SetBounds() on screens with
non-integral scale factors.

To fix, never ask the Widget for its current bounds. Instead, just
assume the last *set* bounds is where the shrink animation should start
from.

Bug: 824627, 629363
Change-Id: I6914f5a779ff57f9fa1c10aefcd04579784d73ca
Reviewed-on: https://chromium-review.googlesource.com/981970
Commit-Queue: Trent Apted <tapted@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546354}
Former-commit-id: 43fdbea70216927d5b53a063ddbf81e6dbee373c